# task_for_apptrix

./: .gitignore  README.md
.github/workflows/: apptrix_actions.yml
application/: .dockerignore  Dockerfile  pyproject.toml
application/api/: urls.py
application/api/core/: fields.py
application/api/users/: filters.py  serializers.py  views.py
application/config/: settings.py  urls.py
application/core/: admin.py  fields.py  models.py  services.py  validators.py
application/users/: __init__.py  admin.py  managers.py  models.py  permissions.py
application/users/migrations/: 0001_initial.py  0002_alter_customuser_gender_match_match_unique_match.py  0003_customuser_latitude_customuser_longitude.py
apptrix-infra/: .env.template  docker-compose.override.yml  docker-compose.yml
